# diploma

./: README.md  meeting_20250601_220027.md  meeting_20250601_231255.md  pyproject.toml
app/: __main__.py  config.py
app/audio/: capture.py  mixer.py  models.py
app/gui/: mainwindow.py  style_dark.qss  style_graphite.qss  style_light.qss
app/nlp/: summary.py
app/stt/: whisper.py
app/ui/: __init__.py  main.ui
app/workflows/: recorder.py  summarizer.py
capture-cli/: Program.cs  WinLoopCap.csproj
tools/: build.sh  build_capture.ps1
