[tool.poetry]
name        = "online-meeting-optimizer"
version     = "0.1.0"
description = "Local transcript + summary for online-meetings"
authors     = ["You <you@email>"]
readme      = "README.md"
packages    = [{include = "app"}]

[tool.poetry.dependencies]
python          = "^3.11,<3.12"
pyside6         = "^6.7"          # Qt 6 GUI
qasync          = "^0.27"         # asyncio ↔ Qt bridge
qtawesome       = "^1.3"          # FontAwesome иконки
pyqtdarktheme   = {version="^2.1", python="<3.12"}
openai-whisper  = "*"             # STT (CPU)
aiohttp         = "^3.9"
numpy           = "^1.26"
pydub = "^0.25.1"
ffmpeg-python = "^0.2.0"
regex = "^2024.11.6"
keyboard = "^0.13.5"

[tool.poetry.scripts]
omeeting = "app.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
